k8s/stockmodeemailworker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stockmode-emailworker
  name: stockmode-emailworker
  namespace: stockmode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockmode-emailworker
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: stockmode-emailworker
    spec:
      containers:
      - image: stockmodergacr.azurecr.io/stockmode-emailworker:v1
        name: stockmode-emailworker
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
      restartPolicy: Always
