k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: stockmode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          tcpSocket:
            port: 5432
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          exec:
            command:
              - CMD-SHELL
              - pg_isready -U stockmode -d stockmodedb
        resources: 
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres-service
  namespace: stockmode
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
